hphp/test/zend/good/ext/standard/tests/time/strptime_parts.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!function_exists('strptime')) {
    die("skip - strptime() function not available in this build");
}
}
